[gd_scene load_steps=4 format=3 uid="uid://db4sccd73ju1h"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_p3hdd"]
[ext_resource type="Texture2D" uid="uid://cmsvec65vp4wu" path="res://assets/graphics/player/player.png" id="1_stu2j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i7gj3"]
radius = 62.2013

[node name="Player" type="CharacterBody2D"]
position = Vector2(1, -39)
script = ExtResource("1_p3hdd")

[node name="PlayerImage" type="Sprite2D" parent="."]
visibility_layer = 2
position = Vector2(0, 5)
texture = ExtResource("1_stu2j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 39)
shape = SubResource("CircleShape2D_i7gj3")

[node name="LaserReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(20, -125)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
visibility_layer = 2
position = Vector2(29, -125)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(9, -125)

[connection signal="timeout" from="LaserReloadTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_timer_2_timeout"]
